# vectorization

./: .gitignore  README.md  makefile  pyproject.toml
numpy/: matrix.ipynb
vectorization/: vectorization.ipynb
vectorization/.jukit/: .jukit_info.json  vectorization_outhist.json
