[tool.poetry]
name = "vectorization"
version = "0.1.0"
description = "How to vectorize code"
authors = [ "Benjamin Labrecque" ]
packages = [
    { include = "vectorization" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.1.3"
numpy = "^2.0.0"
jupyter = "^1.0.0"
pynvim = "^0.4.3"
matplotlib = "^3.8.2"
notebook = "^7.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
isort = "^5.12.0"
# Supposedly quite fast, but need to figure out how to make it work with Neovim
ruff = "^0.1.5"

[tool.mypy]
files = "vectorization"
strict = true
namespace_packages = true
explicit_package_bases = true

# [tool.isort]
# profile = "black"

[tool.ruff.lint]
select = [
    # pycodestyle
    # "E",
    # Pyflakes
    # "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    # "B",
    # flake8-simplify
    # "SIM",
    # isort
    "I",
]
fixable = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["vectorization"]
